sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:21: error: not found: value a
        a = 1;
        ^AlgCombSort:26: error: not found: value a
  } while ( ecart > 1 || a == 1)
                         ^